// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing NavBar when closed 1`] = `
<React.Fragment>
  <div
    className="cn-button"
    id="cn-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    +
  </div>
  <div
    className="cn-wrapper"
    id="cn-wrapper"
  >
    <ul>
      <li>
        <a
          href="#"
        >
          <span
            className="fas fa-user-plus"
          />
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <span
            className="fas fa-home"
          />
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <span
            className="fas fa-star"
          />
        </a>
      </li>
    </ul>
  </div>
  <div
    className="cn-overlay"
    id="cn-overlay"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  />
</React.Fragment>
`;

exports[`testing NavBar when opened 1`] = `
<React.Fragment>
  <div
    className="cn-button"
    id="cn-button"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    -
  </div>
  <div
    className="cn-wrapper opened-nav"
    id="cn-wrapper"
  >
    <ul>
      <li>
        <a
          href="#"
        >
          <span
            className="fas fa-user-plus"
          />
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <span
            className="fas fa-home"
          />
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <span
            className="fas fa-star"
          />
        </a>
      </li>
    </ul>
  </div>
  <div
    className="cn-overlay on-overlay"
    id="cn-overlay"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  />
</React.Fragment>
`;
